--- a/index.html
+++ b/index.html
@@ -8,34 +8,28 @@
 
 	<p>Como muchas de las grandes cosas en esta vida, Git comenzó con un poco de destrucción creativa y una gran polémica.</p>
 	
-
 	<p>El kernel de Linux es un proyecto de software de código abierto con un alcance bastante amplio. Durante la mayor parte del mantenimiento del kernel de Linux (1991-2002), los cambios en el software se realizaban a través de parches y archivos. En el 2002, el proyecto del kernel de Linux empezó a usar un DVCS propietario llamado BitKeeper.</p>
 	
-
 	<p>En el 2005, la relación entre la comunidad que desarrollaba el kernel de Linux y la compañía que desarrollaba BitKeeper se vino abajo, y la herramienta dejó de ser ofrecida de manera gratuita. Esto impulsó a la comunidad de desarrollo de Linux (y en particular a Linus Torvalds, el creador de Linux) a desarrollar su propia herramienta basada en algunas de las lecciones que aprendieron mientras usaban BitKeeper. Algunos de los objetivos del nuevo sistema fueron los siguientes:</p>
 	
-
-	<p>* Velocidad</p>
+        <p>* Velocidad</p>
 	
-
 	<p>*Diseño sencillo</p>
 	
-
-	<p>*Gran soporte para desarrollo no lineal (miles de ramas paralelas)</p>
+        <p>*Gran soporte para desarrollo no lineal (miles de ramas paralelas)</p>
 	
-
 	<p>*Completamente distribuido</p>
 	
-
-	<p>Capaz de manejar grandes proyectos (como el kernel de Linux) eficientemente (velocidad y tamaño de los datos)</p>
+        <p>Capaz de manejar grandes proyectos (como el kernel de Linux) eficientemente (velocidad y tamaño de los datos)</p>
 	
-
-	<p>Desde su nacimiento en el 2005, Git ha evolucionado y madurado para ser fácil de usar y conservar sus características iniciales. Es tremendamente rápido, muy eficiente con grandes proyectos, y tiene un increíble sistema de ramificación (branching) para desarrollo no lineal.</p>
+        <p>Desde su nacimiento en el 2005, Git ha evolucionado y madurado para ser fácil de usar y conservar sus características iniciales. Es tremendamente rápido, muy eficiente con grandes proyectos, y tiene un increíble sistema de ramificación (branching) para desarrollo no lineal.</p>
 	
-
-	    <h3>BIBLIOGRAFIA</h3>
+	<h3>BIBLIOGRAFIA</h3>
 	    
-	    <a href="https://git-scm.com/book/es/v2 ">Conocer mas de git</a>
+	<a href="https://git-scm.com/book/es/v2 ">Conocer mas de git</a>
+			
+			
+			<h1>Muchas Gracias...</h1>
 	
 
 		<BODY> 
